# CodeVisualizer

./: .ai-map-targets  .gitignore  AI_PROJECT_MEMORY.md  CHANGELOG.md  README.md  Readme.md  codebase_visualizer.py  pyproject.toml
Readme/: .ai-map-excludes.example  .ai-map-targets.example  .cursorrules.example  AI_AGENT_GUIDE.md  AI_PROJECT_MEMORY.md
codevisualizer/: __init__.py  _analyzer.py  _commands.py  _git.py  cli.py
codevisualizer/templates/: .codevis-excludes.example  .codevis-targets.example  AI_PROJECT_MEMORY.md
git-hooks/: pre-commit
scripts/: ai_note.sh  changelog.sh  install_git_hooks.sh  regenerate_mermaid_output.sh  sync.sh
